--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "week1-baseball"]
 	path = week1-baseball
 	url = https://github.com/rednada1486/java-baseball-6.git
+[submodule "week2-racingcar"]
+	path = week2-racingcar
+	url = https://github.com/rednada1486/java-racingcar-6.git
