--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "week3-lotto"]
 	path = week3-lotto
 	url = https://github.com/rednada1486/java-lotto-6.git
+[submodule "week3-racingcar"]
+	path = week3-racingcar
+	url = https://github.com/rednada1486/java-racingcar-6.git
